feat: expose the field mask in UpdateModel (#395)
Required to be able to clear extra_args.
